--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -37,6 +40,10 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "react-test-renderer": "^16.9.0",
     "redux-mock-store": "^1.5.3"
   }
 }
